# Saffev

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: notarize-macos.yml  release.yml
src/: attribution.rs  brand.rs  config.rs  error.rs  exposure.rs  lib.rs  main.rs  tokens.rs  update.rs
src/brain/: mod.rs  pii.rs
src/cli/: commands.rs  daemon.rs  mod.rs
src/engine/: adopt.rs  cooperative.rs  detect.rs  mod.rs  supervise.rs  systemd.rs
src/proxy/: handlers.rs  mod.rs  upstream.rs
src/store/: mod.rs  schema.rs
src/studio/: api.rs  assets.rs  auth.rs  dto.rs  mod.rs
src/ui/: mod.rs  palette.rs
studio-web/: app.js  charts.js  fonts.css  index.html  styles.css  tokens.css
tests/: update_endpoint_auth.rs
