[package]
name = "saffev"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
description = "Saffev — a transparent, on-device proxy + Studio in front of a local LLM engine (observe-only, fail-open)."
license = "MIT OR Apache-2.0"
default-run = "saffev"

[[bin]]
name = "saffev"
path = "src/main.rs"

[lib]
name = "saffev"
path = "src/lib.rs"

[features]
default = []
# At-rest encryption for the SQLite store via SQLCipher. OFF by default so the
# stock build is guaranteed-green (plain bundled SQLite). When this is enabled,
# `store` opens the database with a key pulled from the OS keyring and issues the
# `PRAGMA key` handshake. See `src/store/mod.rs`.
sqlcipher = ["rusqlite/bundled-sqlcipher"]

[dependencies]
# --- async runtime / proxy spine ---
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json"] }
bytes = "1.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# --- serialization / config ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# --- storage / secrets ---
# NB: plain bundled SQLite by default. The `sqlcipher` cargo feature swaps in
# `bundled-sqlcipher` for at-rest encryption (OFF by default — see [features]).
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
keyring = "2.3"

# --- studio asset embedding ---
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
mime_guess = "2.0"

# --- cli ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- misc / cross-cutting ---
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
once_cell = "1.19"
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
