[package]
name = "saffev"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Saffev — a transparent, on-device proxy + Studio in front of a local LLM engine (observe-only, fail-open)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/theoyinbooke/Saffev"
homepage = "https://github.com/theoyinbooke/Saffev"
default-run = "saffev"

[[bin]]
name = "saffev"
path = "src/main.rs"

[lib]
name = "saffev"
path = "src/lib.rs"

[features]
# At-rest encryption is ON by default (v1 acceptance §10.5). The stock build
# links bundled SQLCipher and opens the database with a key pulled from the OS
# keyring (or the `SAFFEV_DB_KEY` env override) via the `PRAGMA key` handshake.
# See `src/store/mod.rs`.
default = ["sqlcipher"]
# At-rest encryption for the SQLite store via SQLCipher (bundled — compiles C, no
# system crypto deps). Enabled in `default`; opt out with `--no-default-features`
# for a plain bundled-SQLite build.
sqlcipher = ["rusqlite/bundled-sqlcipher"]

[dependencies]
# --- async runtime / proxy spine ---
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json"] }
bytes = "1.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# --- serialization / config ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# --- storage / secrets ---
# NB: at-rest encryption is ON by default — the `sqlcipher` feature (in the
# default set) adds `bundled-sqlcipher`. `--no-default-features` falls back to
# plain bundled SQLite (the `bundled` feature here). See [features].
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
keyring = "2.3"

# --- studio asset embedding ---
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
mime_guess = "2.0"

# --- cli ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- in-app auto-update ---
# Reads the cargo-dist install receipt (written when `install-updater = true`,
# see dist-workspace.toml), queries the latest GitHub release for this repo, and
# applies the update by re-running the shipped installer. PRIVACY: the ONLY thing
# this ever contacts is GitHub release metadata + the installer asset — it sends
# no user or content data, consistent with the on-device invariant. Used by the
# `saffev update` CLI and the Studio `/api/update` routes (see src/update.rs).
axoupdater = "0.10"

# --- misc / cross-cutting ---
# Lock-free, atomically-swappable Arc — the live-reloadable config handle shared
# by the proxy + Studio so Settings changes apply without a restart. `.load()` is
# a cheap RCU read, fine on the request hot path.
arc-swap = "1.7"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
once_cell = "1.19"
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
